# waypoint

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  bump-version.sh  deny.toml  docker-entrypoint.sh  install.sh  waypoint.toml
.github/workflows/: release.yml
db/migrations/: R__Create_user_view.sql  V1__Create_users.sql  V2__Add_email_to_users.sql
docs/: ENGINES.md
waypoint-cli/: Cargo.toml  build.rs
waypoint-cli/src/: main.rs  output.rs
waypoint-core/: Cargo.toml
waypoint-core/src/: advisor.rs  checksum.rs  config.rs  db.rs  error.rs  guard.rs  history.rs  hooks.rs  lib.rs  migration.rs  multi.rs  placeholder.rs  preflight.rs  safety.rs  schema.rs
waypoint-core/src/commands/: baseline.rs  clean.rs  diff.rs  drift.rs  explain.rs  info.rs  migrate.rs  mod.rs  repair.rs  simulate.rs  snapshot.rs  undo.rs  validate.rs
waypoint-core/src/dialect/: mod.rs  mysql.rs  postgres.rs
waypoint-core/src/engines/: mod.rs
waypoint-core/src/engines/mysql/: advisor.rs  history.rs  mod.rs  safety.rs
waypoint-core/src/engines/postgres/: advisor.rs  history.rs  mod.rs  safety.rs
waypoint-core/tests/: integration_test.rs  mysql_integration_test.rs
