[package]
name = "waypoint-core"
version = "0.2.0"
edition = "2021"
description = "Lightweight, Flyway-compatible PostgreSQL migration library"
license = "MIT"
repository = "https://github.com/mantissaman/waypoint"
homepage = "https://github.com/mantissaman/waypoint"
keywords = ["database", "migration", "postgresql", "flyway", "sql"]
categories = ["database"]
readme = "../README.md"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.12"
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "0.26"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crc32fast = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
