[package]
name = "waypoint-core"
version = "0.3.2"
edition = "2021"
description = "Lightweight, Flyway-compatible PostgreSQL migration library"
license = "MIT"
repository = "https://github.com/mantissaman/waypoint"
homepage = "https://github.com/mantissaman/waypoint"
keywords = ["database", "migration", "postgresql", "flyway", "sql"]
categories = ["database"]
readme = "../README.md"
documentation = "https://docs.rs/waypoint-core"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.12"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
fastrand = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crc32fast = "1"
thiserror = "2"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
