[package]
name = "waypoint-core"
version = "0.4.0"
edition = "2021"
description = "Lightweight, Flyway-compatible SQL migration library for PostgreSQL and MySQL"
license = "MIT"
repository = "https://github.com/tensorbee/waypoint"
homepage = "https://github.com/tensorbee/waypoint"
keywords = ["database", "migration", "postgresql", "mysql", "flyway"]
categories = ["database"]
readme = "../README.md"
documentation = "https://docs.rs/waypoint-core"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
fastrand = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crc32fast = "1"
thiserror = "2"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"
async-trait = "0.1"

# PostgreSQL backend (default)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
tokio-postgres-rustls = { version = "0.12", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }

# MySQL backend (opt-in)
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust", "rustls-tls", "chrono"], optional = true }

[features]
default = ["postgres"]
postgres = ["dep:tokio-postgres", "dep:tokio-postgres-rustls", "dep:rustls", "dep:rustls-pki-types", "dep:webpki-roots"]
mysql = ["dep:mysql_async"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
